--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- Vite inyectará automáticamente el script aquí durante el build -->
     <script type="module" src="/index.tsx"></script>
     <script>
       console.log('HTML cargado, esperando Vite...');
